conv-api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conv-api
  template:
    metadata:
      labels:
        app: conv-api
    spec:
      containers:
      - name: conv-api
        image: antonlarichev/conv-api:1.0
        resources:
          limits:
            memory: "512Mi"
            cpu: "200m"
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: conv-api-image-storage
            mountPath: /opt/app/uploads
      volumes:
        - name: conv-api-image-storage
          persistentVolumeClaim:
            claimName: conv-api-pvc
