conv-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      podId: conv-app-pod
  template:
    metadata:
      labels:
        podId: conv-app-pod
    spec:
      containers:
        - name: conv-app
          image: antonlarichev/conv-app:1.0
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
      volumes:
        - name: test
          configMap:
            name: conv-app-configmap
