converter.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: converter
  template:
    metadata:
      labels:
        app: converter
    spec:
      containers:
      - name: converter-container
        image: antonlarichev/conv-service:1.0
        resources:
          limits:
            memory: "512Mi"
            cpu: "200m"
        ports:
        - containerPort: 3000
