conv-api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-api-clusterip
spec:
  type: ClusterIP
  selector:
    app: conv-api
  ports:
  - port: 3000
    protocol: TCP
