conv-app.cluster-ip.yaml
apiVersion: v1 
kind: Service
metadata:
  name: conv-app-clusteip
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    podId: conv-app-pod
