conv-app.service.yaml
# deprecated
apiVersion: v1
kind: Service 
metadata:
  name: conv-app-service
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 80
      nodePort: 31200
  selector:
    podId: conv-app-pod
