converter.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: converter-clusterip
spec:
  selector:
    app: converter
  ports:
  - port: 3000
    protocol: TCP
