rabbitmq.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - port: 5672
    protocol: TCP
